<?xml version="2.0"?>
<package format="2">
    <name>sensor_fusion</name>
    <version>1.0.0</version>
    <description>Projection-based LiDAR-camera sensor-fusion module.</description>

    <maintainer email="ashwin@drviehalo.com">ashwin nanda</maintainer>
    <license>BSD</license>

    <!-- build system -->
    <buildtool_depend>catkin</buildtool_depend>

    <!-- build + exec deps -->
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>visualization_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>image_transport</depend>
    <depend>pcl_ros</depend>
    <depend>pcl_conversions</depend>
    <depend>message_filters</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>tf2_eigen</depend>
    <depend>camera_info_manager</depend>
</package>
